# QuizExtractor

./: README.md  pyproject.toml
output/: 1.json  ocr_result.json  ocr_text.txt  ocr_text_test.txt
src/quiz_extractor/: aliyun_ocr.py  extractor.py  file_ocr.py  llm.py  main.py  qes_type.py  quiz_extractor.py
utils/: utils.py
