[project]
name = "quizextractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-darabonba-stream>=0.0.2",
    "alibabacloud-tea-console>=0.0.1",
    "langchain>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "natsort>=8.4.0",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.0",
]
